<resources>
    <string name="app_name">Weather App</string>
    <string name="Refresh">Refresh</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="pref_title_Unit">Temperature Units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string-array name="pref_temp_choices">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string name="pref_units_metric">Metric</string>
    <string name="pref_units_imperial">Imperial</string>
    <string name="pref_temp_default">Metric</string>
    <string name="action_map">action_map</string>
    <string-array name="pref_units_values">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_default" translatable="false">Coimbatore</string>
    <string name="action_share">Share</string>
    
    <string name="pref_days_key">5</string>
    <string name="pref_days_label">No.of.Days</string>
    <string name="pref_days_default">5</string>
    <string name="pref_five">5</string>
    <string name="pref_seven">7</string>
    <string name="pref_ten">10</string>
    

</resources>
